<resources>
    <string name="app_name">NetclanAssignment</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_connections">Connections</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_groups">Groups</string>
    <string name="personal_tablayout">Personal</string>
    <string name="service_tablayout">Service</string>
    <string name="business_tablayout">Business</string>
    <string name="addressfetch">pratap vihar, Ghaziabad</string>
    <string name="myprofile">My Profile</string>
    <string name="mynetwork">My Network</string>
    <string name="switchtoservice">Switch to Service</string>
    <string name="switchtobussiness">Switch to Business</string>
    <string name="datiing">Dating</string>
    <string name="matrimony">Matrimony</string>
    <string name="buysellrent">Buy-Sell-Rent</string>
    <string name="jobs">Jobs</string>
    <string name="businesscards">Business Cards</string>
    <string name="netclangroups">Netclan Groups</string>
    <string name="user_name">Shivam Sharma</string>
    <string name="user_address">Pratap Vihar, Ghaziabad</string>
    <string name="user_online_status">Available</string>
    <string name="profilepicture">profilepicture</string>
    <string name="name">Shivam Sharma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refine_change_button">Refine</string>
    <string name="select_your_availability">Select Your Availability</string>
    <string name="let_us_connect">Let us Connect</string>
    <string name="i_am_open_to_new_connections">I am open to new connections</string>
    <string name="add_your_status">Add your status</string>
    <string name="ex_20km">Ex- 20km</string>
    <string name="select_hyper_hocal_distance">Select Hyper Hocal Distance</string>
    <string name="Cofee">Cofee</string>
    <string name="Bussines">Business</string>
    <string name="Hobbies">Hobbies</string>
    <string name="Movies">Movies</string>
    <string name="Freindship">Friendship</string>
    <string name="Dating">Dating</string>
    <string name="Matrimony">Matrimony</string>
    <string name="Dinning">Dinning</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="user">Shivam Sharma</string>
    <string name="address">Delhi Ncr</string>
    <string name="distance_in_metre">100-200m Away</string>
    <string name="business_text_in_card">Business |</string>
    <string name="hobby_in_card">Hobbies |</string>
    <string name="friendship_incard">Freindship |</string>
    <string name="matrimony_incard">Matrimony |</string>


</resources>