<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refine_layoutid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".refine_fragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/material_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/netclan_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/menu_open_icon"

            app:navigationIconTint="@color/white"
            app:title="Refine"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:text="@string/select_your_availability"

        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_of_input_text"
        android:ems="10"
        android:inputType="text"
        android:padding="10dp"
        android:text="@string/let_us_connect"
        android:textColor="@color/search_border"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="25dp"
        android:text="@string/add_your_status"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_of_input_text"
        android:ems="10"
        android:inputType="text"
        android:padding="10dp"
        android:text="@string/i_am_open_to_new_connections"
        android:textColor="@color/search_border"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:text="@string/select_hyper_hocal_distance"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/edittext2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edittext2"
        app:layout_constraintTop_toBottomOf="@+id/edittext2" />

    <EditText
        android:id="@+id/diatanceselector"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_of_input_text"
        android:ems="10"
        android:inputType="text"
        android:padding="10dp"
        android:text="@string/ex_20km"
        android:textColor="@color/search_border"
        app:layout_constraintEnd_toEndOf="@+id/distance"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/distance"
        app:layout_constraintTop_toBottomOf="@+id/distance" />

    <TextView
        android:id="@+id/purpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="25dp"
        android:text="@string/select_purpose"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/diatanceselector"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/diatanceselector"
        app:layout_constraintTop_toBottomOf="@+id/diatanceselector" />

    <TextView
        android:id="@+id/coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/search_view_shape"
        android:padding="10dp"
        android:text="@string/Bussines"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/hobbies"
        app:layout_constraintEnd_toStartOf="@+id/freindship"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hobbies"
        app:layout_constraintTop_toTopOf="@+id/hobbies" />

    <TextView
        android:id="@+id/hobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/search_view_shape"
        android:padding="10dp"
        android:text="@string/Hobbies"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/purposebutton"
        app:layout_constraintEnd_toStartOf="@+id/coffee"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/purposebutton"
        app:layout_constraintTop_toBottomOf="@+id/purpose"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/freindship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/search_view_shape"
        android:padding="10dp"
        android:text="@string/Freindship"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/coffee"
        app:layout_constraintTop_toTopOf="@+id/coffee" />

    <TextView
        android:id="@+id/purposebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:background="@drawable/search_view_shape"
        android:padding="10dp"
        android:text="@string/Cofee"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/hobbies"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purpose" />


</androidx.constraintlayout.widget.ConstraintLayout>