<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/material_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/netclan_color"
                app:navigationIcon="@drawable/menu_open_icon"
                app:navigationIconTint="@color/white"
                app:title="Shivam Sharma"
                app:titleTextColor="@color/white"

                tools:layout_editor_absoluteX="23dp"
                tools:layout_editor_absoluteY="178dp">

                <ImageView
                    android:id="@+id/refinebutton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="125dp"
                    android:background="@color/white"
                    android:src="@drawable/refine_icon"
                    android:text="@string/refine_change_button" />


            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="409dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/netclan_color_light"
            app:tabTextColor="@color/white"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_tablayout"
                />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_tablayout"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="115dp" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_tablayout" />
        </com.google.android.material.tabs.TabLayout>



        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/search_view_shape"
            app:layout_constraintStart_toStartOf="@+id/tabLayout"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />


        <ImageView
            android:id="@+id/filtersearch_icon"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:background="@color/white"
            android:src="@drawable/filter"
            app:layout_constraintBottom_toBottomOf="@+id/searchView"
            app:layout_constraintEnd_toEndOf="@+id/tabLayout"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toEndOf="@+id/searchView"
            app:layout_constraintTop_toTopOf="@+id/searchView"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.cardview.widget.CardView
            android:layout_width="380dp"
            android:layout_height="240dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/man"


                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/purposebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginStart="8dp"
                    android:padding="10dp"
                    android:text="@string/user"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/invite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="24dp"
                    android:padding="10dp"
                    android:text="+INVITE"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/purposebutton"
                    app:layout_constraintStart_toEndOf="@+id/purposebutton"
                    app:layout_constraintTop_toTopOf="@+id/purposebutton"
                    app:layout_constraintVertical_bias="0.411" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:text="@string/address"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/purposebutton"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/purposebutton"
                    app:layout_constraintTop_toBottomOf="@+id/purposebutton" />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/distance_in_metre"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/address"
                    app:layout_constraintTop_toBottomOf="@+id/purposebutton" />


                <TextView
                    android:id="@+id/line_of_hobbies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_marginTop="12dp"
                    android:padding="5dp"
                    android:text="@string/business_text_in_card"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/card_hobby"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:padding="5dp"
                    android:text="@string/hobby_in_card"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/line_of_hobbies"
                    app:layout_constraintStart_toEndOf="@+id/line_of_hobbies"
                    app:layout_constraintTop_toTopOf="@+id/line_of_hobbies" />

                <TextView
                    android:id="@+id/freindship"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:padding="5dp"
                    android:text="@string/friendship_incard"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/card_hobby"
                    app:layout_constraintStart_toEndOf="@+id/card_hobby"
                    app:layout_constraintTop_toTopOf="@+id/card_hobby" />

                <TextView
                    android:id="@+id/matrimony"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/matrimony_incard"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/freindship"
                    app:layout_constraintStart_toEndOf="@+id/freindship"
                    app:layout_constraintTop_toTopOf="@+id/freindship" />


                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:padding="5dp"
                    android:text="I have expertise in manual and automated testing and am highly skilled in test case creation. I have 3 year of Experience in Android Development"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@+id/line_of_hobbies"
                    app:layout_constraintTop_toBottomOf="@+id/line_of_hobbies" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>


<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start"-->
<!--        app:headerLayout="@layout/drawer_header"-->
<!--        app:menu="@menu/drawer_menu" />-->






</androidx.drawerlayout.widget.DrawerLayout>